--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,6 @@ dependencies = [
     "tabpfn-client>=0.2.6",
     "tabpfn-extensions[all]>=0.0.4",
     "torch>=2.9.1",
+    "torchvision>=0.24.1",
     "xgboost>=3.1.3",
 ]
