--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "ipywidgets>=8.1.8",
     "matplotlib>=3.10.8",
     "numpy>=2.4.1",
+    "openai>=2.15.0",
     "rich>=14.2.0",
     "tabpfn>=6.3.1",
     "tabpfn-client>=0.2.6",
