--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,24 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "accelerate>=0.30.0",
     "catboost>=1.2.8",
+    "compressed-tensors>=0.13.0",
     "datasets>=4.5.0",
-    "huggingface-hub>=1.3.2",
+    "huggingface-hub>=0.34.0,<1.0",
     "ipykernel>=7.1.0",
     "ipywidgets>=8.1.8",
     "matplotlib>=3.10.8",
-    "numpy>=2.4.1",
+    "numpy>=1.17,<2.0",
     "openai>=2.15.0",
+    "pip>=25.3",
     "rich>=14.2.0",
+    "safetensors>=0.4.0",
     "tabpfn>=6.3.1",
     "tabpfn-client>=0.2.6",
     "tabpfn-extensions[all]>=0.0.4",
-    "torch>=2.9.1",
-    "torchvision>=0.24.1",
+    "torch==2.9.0",  # Note: CPU-only version installed via: uv pip install --index-url https://download.pytorch.org/whl/cpu torch==2.9.0+cpu torchvision==0.24.0+cpu
+    "torchvision==0.24.0",
+    "transformers>=4.57.6,<5.0.0",
     "xgboost>=3.1.3",
 ]
