--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "huggingface-hub>=0.34.0,<1.0",
     "ipykernel>=7.1.0",
     "ipywidgets>=8.1.8",
+    "jupyter-ai>=2.31.7",
+    "jupyterlab>=4.5.3",
     "matplotlib>=3.10.8",
     "numpy>=1.17,<2.0",
     "openai>=2.15.0",
@@ -24,5 +26,6 @@ dependencies = [
     "torch==2.9.0",  # Note: CPU-only version installed via: uv pip install --index-url https://download.pytorch.org/whl/cpu torch==2.9.0+cpu torchvision==0.24.0+cpu
     "torchvision==0.24.0",
     "transformers>=4.57.6,<5.0.0",
+    "trl[vllm]",
     "xgboost>=3.1.3",
 ]
