Update HuggingFace Cheatsheet

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,5 +27,6 @@ dependencies = [
     "torchvision==0.24.0",
     "transformers>=4.57.6,<5.0.0",
     "trl[vllm]",
+    "vllm>=0.1.0",
     "xgboost>=3.1.3",
 ]
