--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 
 # Ignore environment folder
 /.env/
+/.venv/
 /asset/models
 /asset/data
 /asset/catboost_info
 /asset/__pycache__
 /100_day_challenge.egg-info/
+/.vllm-src/
