--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,30 +3,60 @@ name = "100-day-challenge"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
     "accelerate>=0.30.0",
     "catboost>=1.2.8",
     "compressed-tensors>=0.13.0",
     "datasets>=4.5.0",
-    "huggingface-hub>=0.34.0,<1.0",
     "ipykernel>=7.1.0",
     "ipywidgets>=8.1.8",
     "jupyter-ai>=2.31.7",
     "jupyterlab>=4.5.3",
     "matplotlib>=3.10.8",
-    "numpy>=1.17,<2.0",
+    "numpy>=2.0,<3.0",
     "openai>=2.15.0",
     "pip>=25.3",
     "rich>=14.2.0",
     "safetensors>=0.4.0",
     "tabpfn>=6.3.1",
     "tabpfn-client>=0.2.6",
-    "tabpfn-extensions[all]>=0.0.4",
-    "torch==2.9.0",  # Note: CPU-only version installed via: uv pip install --index-url https://download.pytorch.org/whl/cpu torch==2.9.0+cpu torchvision==0.24.0+cpu
-    "torchvision==0.24.0",
+    # "tabpfn-extensions[all]>=0.0.4",
+    "torchaudio==2.9.1",
+    "torch==2.9.1",
+    "torchvision==0.24.1",
     "transformers>=4.57.6,<5.0.0",
     "trl[vllm]",
-    "vllm>=0.1.0",
+    "vllm>=0.14.0",
     "xgboost>=3.1.3",
+    "nvidia-cuda-runtime>=13",
+    "huggingface-hub>=0.36.0",
 ]
+
+[tool.uv.sources]
+vllm = { path = ".vllm-src", editable = true }
+torch = [
+  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
+  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
+]
+torchvision = [
+  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
+  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
+]
+
+torchaudio = [
+  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
+  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[[tool.uv.index]]
+name = "pytorch-cu130"
+url = "https://download.pytorch.org/whl/cu130"
+explicit = true
+
+# vLLM built from .vllm-src (CUDA 13). Run: uv run vllm serve ...
