--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "xgboost>=3.1.3",
     "nvidia-cuda-runtime>=13",
     "huggingface-hub>=0.36.0",
+    "llmshark>=0.1.0",
 ]
 
 [tool.uv.sources]
